--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,6 @@
-<h2>Home</h2>
+<div class = "jumbotron text-center">
+  <h1>Welcome to dev match</h1>
+  <h3>
+    A site where enterprenuers can meet with developers.
+  </h3>
+</div>
